teams/athens/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: athens
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  tls:
  - hosts:
    - athens-proxy.cs.svu-ac.in
    secretName: ingress-tls
  rules:
  - host: athens-proxy.cs.svu-ac.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: athens-athens-proxy
            port:
              number: 80
